View transition containing block doesn't take content insets into account. https://bugs.webkit.org/show_bug.cgi?id=285400 <rdar://142774967>

Reviewed by NOBODY (OOPS!).

Expand the view transition contaning block rect to cover the inset areas.

Adds a test that does an initial capture (including positioning transform) with
an inset, and then removes the inset during the VT callback. Ensures that the
view transition pseudo elenents are still placed at same screen position,
despite the inset being gone.

* LayoutTests/fast/css/view-transitions-inset-expected.html: Added.
* LayoutTests/fast/css/view-transitions-inset.html: Added.
* Source/WebCore/dom/ViewTransition.cpp:
(WebCore::ViewTransition::containingBlockRect):
(WebCore::ViewTransition::copyElementBaseProperties):